# MyProjects

Apps/App_Old/: StreamFunctionMethod.lnk
Apps/App_Old/StreamFunctionMethod/: PackagingLog.html
Apps/App_Old/Приложение/: ABI.m  CreateROI.m  Elements.m  InterpCircuit.m  PointWebROI.m  ReceivedField.m  TargetField.m  Transform3D.m  app1.mlapp  rotX.m  rotZ.m
Apps/App_SFM_4.0/SourceFiles/: SFM.mlapp  StreamFunctionMethod.prj
Apps/App_SFM_4.1_,beta/: PackagingLog.html  StreamFunctionMethod.prj
Calc_Mag_field/PermMag/: Magnets2_0.m  МАГНИТ.stp
Calc_Mag_field/newBSL/: BioSavarLaplace.m
Generator/OLED/: OLED.ino
Lamp_last_version/: Крышка.m3d  Крышка.stl
Lamp_last_version/Base/: Aurora.ino  Base.ino  Built.ino  Confetti.ino  Mono.ino  Nexus.ino  Play.ino  Rainbow.ino  Rings.ino  Send.ino  Stains.ino  Stars.ino  WIFIinit.ino  Zebra.ino
Magnitometr 1.0/FSWebServer/: FS.ino  FSWebServer.ino  HTTP_init.ino  WIFI.ino
Magnitometr 1.0/Hall_ADC/: Hall_ADC.ino
Magnitometr 1.0/Matrix_1/: Matrix_1.ino
PortAnaliser/SerialPortReader/: mainwindow.cpp  mainwindow.h  mainwindow.ui
PortAnaliser/SerialPortWriter/: SerialPortWriter.ino
Serial/SerialPortReader/: SerialPortReader.pro  mainwindow.cpp  mainwindow.ui
Serial/SerialPortWriter/: SerialPortWriter.ino
SerialMessager/: CMakeLists.txt  main.cpp
SerialMessager/main_window/: main_window.cpp  main_window.hpp
SerialPortReader/: mainwindow.h
SmallPythonGames/: 15.1.py  15.2.py  Морской бой.py  Тетрис2.py
UDPMessager/: CMakeLists.txt  UDPclient.cpp  UDPclient.hpp  main.cpp
(+6 files in other folders)
